--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
 
     <string name="app_name">MapJournal</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="new_trip">New Trip</string>
+    <string name="resume_trip">Resume Trip</string>	
+    <string name="previous_trips">Previous Trips</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main_menu">MainMenuActivity</string>
 
