--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="resume_trip">Resume Trip</string>	
     <string name="previous_trips">Previous Trips</string>
     <string name="menu_settings">Settings</string>
+    <string name="title">Map Journal</string>
     <string name="title_activity_main_menu">MainMenuActivity</string>
 
 </resources>
