--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,13 +8,12 @@
     <string name="previous_trips">Previous Trips</string>
     <string name="menu_settings">Settings</string>
     <string name="title">Map Journal</string>
-    <string name="title_activity_main_menu">Map Journal</string>
     
 <!-- New Trip Activity Strings  -->
     <string name="new_trip_title">Enter a name for your trip</string>
 	<string name="text_box_message">Trip name</string>
 	<string name="submit">Submit</string>
-
+	
 <!--  Invalid name popup -->
 	<string name="invalid_text_alert">Please enter a valid name</string>
 	<string name="dismiss">Close</string>
@@ -25,12 +24,21 @@
 	<string name="cancel">Cancel</string>
 	<string name="delete">Delete Point</string>
 
+
 <!-- 	Used in addPointActivity, MapJournelMapActivity and MapTestItemizedOverlay -->
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_main">Map Journal</string>
     <string name="title_get_location">Check In!</string>
 
     <string name="title_activity_add_point">Check In</string>
+	
+<!-- Menu bar titles -->
+	<string name="main_menu_menu_bar">Map Journal</string>    
+	<string name="new_trip_menu_bar">Create a New Trip</string>
+	<string name="editor_menu_bar">View/Edit Notes</string>
+	<string name="resume_menu_bar">Resume trip</string>
+	<string name="previous_menu_bar">View Previous Trips</string>
+	<string name="add_point_menu_bar">Check In</string>
 	
 </resources>
 
