--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     
-<!--  	Main Activity Strings -->
+<!--  	MainMenuActivity Strings -->
 
     <string name="app_name">Map Journal</string>
     <string name="new_trip">New Trip</string>
@@ -9,16 +9,16 @@
     <string name="menu_settings">Settings</string>
     <string name="title">Map Journal</string>
     
-<!-- New Trip Activity Strings  -->
+<!-- NewTripActivity Strings  -->
     <string name="new_trip_title">Enter a name for your trip</string>
 	<string name="text_box_message">Trip name</string>
 	<string name="submit">Submit</string>
 	
-<!--  Invalid name popup -->
+<!--  Invalid name popup (NewTripActivity) -->
 	<string name="invalid_text_alert">Please enter a valid name</string>
 	<string name="dismiss">Close</string>
 	
-<!--  Text editor strings -->
+<!--  JournalEntryActivity strings -->
 
 	<string name="text_edit_title">Edit your journal entry</string>
 	<string name="cancel">Cancel</string>
@@ -30,7 +30,11 @@
     <string name="title_activity_main">Map Journal</string>
     <string name="title_get_location">Check In!</string>
 
-    <string name="title_activity_add_point">Check In</string>
+<!-- AddPointActivity button/text box strings -->
+    <string name="add_name">Location Name</string>
+    <string name="add_notes">Write Notes (optional)</string>
+    <string name="add_point">Add Point</string>
+    <string name="take_picture">Take a Picture</string>
 	
 <!-- Menu bar titles -->
 	<string name="main_menu_menu_bar">Map Journal</string>    
